[package]
publish = false
workspace = "../../.."
name = "gemel-client"
version = "0.1.0"
license = "MIT"
edition = "2018"
build = "src/build.rs"

[dependencies]
serde_json = "^1.0"
serde = { version = "^1.0", features = ["derive"] }
tauri = { version = "1.0.0-beta.5", features = ["api-all"] }

[build-dependencies]
tauri-build = { version = "1.0.0-beta.3" }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
opt-level = "s"
